# finassistant

./: .env.example  .gitignore  AGENTS.md  README.md  WIP.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: portfolio.py  upload.py
backend/app/core/: database.py
backend/app/models/: __init__.py  portfolio.py
backend/app/schemas/: portfolio.py
backend/app/services/: price_feed.py  vision.py
frontend/: index.html  vue.config.js
frontend/public/: index.html
frontend/src/: App.jsx  App.vue  index.css
frontend/src/api/: portfolio.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/views/: Analysis.vue  Import.vue  News.vue  Portfolio.vue
k8s/: backend-deployment.yaml  ingress.yaml
