[project]
name = "finassistant-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
]
